Console: prevent status bar from overlapping coordinates
Long status bar messages were shown behind the coordinate display in the
status bar, making both illegible. Instead, long status bar messages are
now truncated with an ellipsis. Hovering the mouse over the console will
remove the coordinate display and show the entire status bar, expanding
the console over the rest of the UI if necessary.

To make the width of the status bar adjust to the width of the
coordinate display, the coordinate display is reordered to be the first
child of the console. Effective console height is reduced from 35 to 29
px. The slice controls toggle is the same z-order as the context map
toggle so that the console can occlude it when hovered.

Tested on current OSX Chrome, Firefox and Safari.

Closes acardona/CATMAID#739.

--- a/django/applications/catmaid/static/widgets/themes/kde/console.css
+++ b/django/applications/catmaid/static/widgets/themes/kde/console.css
@@ -6,19 +6,42 @@ div.console
 	margin:0px;
 	padding:0px;
 	width:100%;
-	/*height:32px;*/
-	min-height:32px;
+	min-height:29px; /* Should match global_bottom in init.js */
 	background-color:#F0F0F0;
 	border:none;
-	/*border-top:solid 4px #000000;*/
 	overflow-x: hidden;
+	z-index:10;
 }
+
 div.console pre
 {
+	height:13px;
+	width:auto;
 	margin:8px;
+	overflow-x:hidden;
+	text-overflow:ellipsis;
 	font-family:monospace;
 	font-size:9px;
 	color:#000000;
-	float: left;
-	overflow-x: hidden;
+}
+
+div.console #coordinates
+{
+	float:right;
+	margin-top:8px;
+	margin-right:8px;
+	margin-left:6px;
+	font-family:sans-serif;
+	font-size:15px;
+}
+
+div.console:hover pre
+{
+	height:auto;
+	white-space:pre-wrap
+}
+
+div.console:hover #coordinates
+{
+	display:none;
 }
